further scaffolds components

--- a/src/About/about.scss
+++ b/src/About/about.scss
@@ -1,4 +1,7 @@
-div{
+.about{
     background-color: #d86b05;
-    height: auto;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
