--- a/src/Navbar/navbar.scss
+++ b/src/Navbar/navbar.scss
@@ -1,24 +1,24 @@
 .nav{
     width:100%;
-    height: 70px;
-    background-color:white;
+    height: auto;
+    background-color:rgb(190, 46, 46);
     color:white;
-    position:fixed;
+    // position:fixed;
+    opacity: 80%;
+    top: 0;
+    z-index: 3;
     .wrapper{
         padding:10px 30px;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        border: 2px solid black;
         .left{
             display:flex;
             align-items: center;
-            .logo{
-                font-size: 40px;
-                font-weight: 700;
-                text-decoration: none;
-                margin-right: 40px;
+            .name{
+                border: 2px solid black;
             }
-                
             .itemContainer{
                 display:flex;
                 align-items: center;
@@ -27,26 +27,17 @@
                 img{
                     width: 80px;
                     height: 80px;
-                    border: 2px solid red($color: #000000);
+                    border: 2px solid black;
                 }
             }
         }
         .right{
-            .hamburger{
-                width: 32px;
-                height: 32px;
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
-                cursor: pointer;
-                span{
-                    width: 100%;
-                    height: 3px;
-                    background-color: red($color: #000000);
-                    transform-origin:left;
-                    transition: all 0.5s ease;
-                }
-            }
+            width: 50%;
+            padding: 2%;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            border: 2px solid white;
         }
     }
 
