--- a/src/UpcomingShows/upcomingShows.scss
+++ b/src/UpcomingShows/upcomingShows.scss
@@ -3,4 +3,11 @@
     width:100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+    .showWrapper{
+        background-color: black;
+        width: 100%;
+    }
 }
