--- a/src/Navbar/navbar.scss
+++ b/src/Navbar/navbar.scss
@@ -1,23 +1,27 @@
+@import "../global.scss";
+
 .nav{
+    font-family: 'Poltawski Nowy', serif;
     width:100%;
     height: auto;
-    background-color:rgb(190, 46, 46);
     color:white;
-    // position:fixed;
     opacity: 80%;
     top: 0;
     z-index: 3;
+    background-color: black;
     .wrapper{
         padding:10px 30px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        border: 2px solid black;
         .left{
             display:flex;
             align-items: center;
             .name{
-                border: 2px solid black;
+                font-size: 38px;
+                @include mobile{
+                    font-size: 20px;
+                }
             }
             .itemContainer{
                 display:flex;
@@ -27,7 +31,6 @@
                 img{
                     width: 80px;
                     height: 80px;
-                    border: 2px solid black;
                 }
             }
         }
@@ -37,7 +40,14 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            border: 2px solid white;
+            font-size: 20px;
+            @include mobile{
+                display: none;
+            }
+            a:hover{
+                  color:rgb(248, 227, 227);
+                  cursor: pointer;
+            }
         }
     }
 
