--- a/src/UpcomingShows/upcomingShows.scss
+++ b/src/UpcomingShows/upcomingShows.scss
@@ -1,13 +1,30 @@
+@import "../global.scss";
+
 .upcomingShows{
-    background-color: rgb(81, 140, 192);
+    background-color: black;
     width:100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    
+    font-family: 'Montserrat', sans-serif;
+    padding: 2em;
+    @include mobile{
+        padding:0;
+        width: 100%;
+    }
+    .title{
+        font-family: 'Poltawski Nowy', serif;
+        @include mobile{
+            font-size: 12px;
+        }
+    }
     .showWrapper{
         background-color: black;
-        width: 100%;
+        width: 80%;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+        flex-direction: column;
     }
 }
