--- a/src/Contact/contact.scss
+++ b/src/Contact/contact.scss
@@ -1,6 +1,87 @@
-.contact{
-    background-color: rgb(28, 202, 28);
+@import '../global.scss';
+
+.contactSection{
+    background-color: black;
     width: 100%;
-    display: flex;
-    justify-content: center;
+    height: auto;
+    padding-bottom: 2%;
+    .contactContents{
+        width: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        .formBlock{
+            width: 50%;
+            display:flex;
+            align-items: center;
+            justify-content: center;
+            .formWrapper{
+                input{
+                    height: 40px;
+                    font-size: 20px;
+                    @include mobile{
+                        height:20px;
+                        font-size: 10px;
+                    }
+                }
+                .nameInputs{
+                    font-family: 'Poltawski Nowy', serif;
+                    padding: 5px;
+                    width: 100%;
+                    display: flex;
+                    align-items: center;
+                    .firstName{
+                        padding-right:10px;
+                    }
+                   
+                }
+                .emailAddressInputs{
+                    padding: 5px;
+                    input{
+                        width: 100%;
+                    }
+                }
+                .messageInput{
+                    padding: 5px;
+                    input{
+                        padding:2px;
+                        width: 100%;
+                        height: 80px;
+                        font-size: 20px;
+                        text-align: center;
+                        @include mobile{
+                            font-size: 12px;
+                        }
+                    }
+                }
+                .submitFormButton{
+                    display: flex;
+                    align-content: center;
+                    justify-content: center;
+                    button{
+                        font-size: 20px;
+                        width: 200px;
+                        height: 50px;
+                        padding: 5px;
+                        @include mobile{
+                            font-size: 10px;
+                            width: 180px;
+                            height: 40px;
+                            padding: 2px;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .title{
+        font-family: 'Poltawski Nowy', serif;
+        @include mobile{
+            font-size: 12px;
+        }
+    }
 }
+                        
+                        
+                        
