--- a/src/Releases/music.scss
+++ b/src/Releases/music.scss
@@ -1,6 +1,45 @@
+@import "../global.scss";
+
 .music{
-    background-color: rgb(66, 117, 206);
+    background-color: black;
     width: 100%;
     display: flex;
     justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-family: 'Montserrat', sans-serif;
+    .title{
+        font-family: 'Poltawski Nowy', serif;
+        @include mobile{
+            font-size: 12px;
+        }
+    }
+    .musiccontainer{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 90%;
+        @include mobile{
+            width: 95%;
+        }
+        .platformBox{
+            display: flex;
+            justify-content: center;
+            flex-direction: column;
+            align-items: center;
+            width: 100%;
+            height: auto;
+            padding: 3%;
+            img{
+                width:90%;
+                @include mobile{
+                    width: 120%;
+                    padding: 1%;
+                }
+            }
+            img:hover{
+                cursor:pointer;
+            }
+        }
+    }
 }
