--- a/src/Navbar/navbar.scss
+++ b/src/Navbar/navbar.scss
@@ -5,15 +5,20 @@
     width:100%;
     height: auto;
     color:white;
-    opacity: 80%;
     top: 0;
     z-index: 3;
     background-color: black;
+    position: fixed;
+    filter:opacity(.5);
     .wrapper{
         padding:10px 30px;
         display: flex;
         align-items: center;
         justify-content: space-between;
+        @include mobile{
+            padding:5px 8px;
+            justify-content: left;
+        }
         .left{
             display:flex;
             align-items: center;
@@ -31,6 +36,11 @@
                 img{
                     width: 80px;
                     height: 80px;
+                    filter: blur(1px);
+                    @include mobile{
+                        width: 40px;
+                        height: 40px;
+                    }
                 }
             }
         }
@@ -44,9 +54,23 @@
             @include mobile{
                 display: none;
             }
+            a{
+                text-decoration: none;
+                color: whitesmoke;
+                scroll-behavior: smooth;
+            }
             a:hover{
-                  color:rgb(248, 227, 227);
+                  color:rgb(143, 128, 242);
                   cursor: pointer;
+            }
+            img{
+                width: 80px;
+                height: 80px;
+                filter: blur(1px);
+                @include mobile{
+                    width: 40px;
+                    height: 40px;
+                }
             }
         }
     }
