--- a/src/Releases/music.scss
+++ b/src/Releases/music.scss
@@ -3,11 +3,15 @@
 .music{
     background-color: black;
     width: 100%;
+    height:450px;
     display: flex;
-    justify-content: center;
     align-items: center;
     flex-direction: column;
     font-family: 'Montserrat', sans-serif;
+    @include mobile{
+        height: 250px;
+        padding-top: 2px;
+    }
     .title{
         font-family: 'Poltawski Nowy', serif;
         @include mobile{
@@ -33,7 +37,7 @@
             img{
                 width:90%;
                 @include mobile{
-                    width: 120%;
+                    width: 100%;
                     padding: 1%;
                 }
             }
