--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,10 @@
   display: flex;
   align-items: center;
   flex-direction: column;
+  background-color: rgb(3, 67, 127);
+}
+html{
+  scroll-behavior: smooth;
+  scroll-snap-type: y mandatory;
+  scroll-snap-align: start;
 }
