--- a/src/Navbar/navbar.scss
+++ b/src/Navbar/navbar.scss
@@ -3,13 +3,16 @@
 .nav{
     font-family: 'Poltawski Nowy', serif;
     width:100%;
-    height: auto;
+    height: 10vh;
     color:white;
     top: 0;
     z-index: 3;
     background-color: black;
     position: fixed;
     filter:opacity(.5);
+    @include mobile{
+        height: fit-content;
+    }
     a{
         text-decoration: none;
         color: white;
