--- a/src/Navbar/navbar.scss
+++ b/src/Navbar/navbar.scss
@@ -9,6 +9,7 @@
     z-index: 3;
     background-color: black;
     position: fixed;
+    transition: 0.5s;
     filter:opacity(.5);
     @include mobile{
         height: fit-content;
