--- a/src/Navbar/navbar.scss
+++ b/src/Navbar/navbar.scss
@@ -13,6 +13,10 @@
     filter:opacity(.5);
     @include mobile{
         height: fit-content;
+        .rightMobile{
+            display: flex;
+            flex-direction: row-reverse;
+        }
     }
     a{
         text-decoration: none;
@@ -63,17 +67,25 @@
             align-items: center;
             justify-content: space-between;
             font-size: 20px;
+            .menuButton{
+                display: none;
+            }
             @include mobile{
                 display: none;
             }
-            a{
-                text-decoration: none;
-                color: whitesmoke;
-                scroll-behavior: smooth;
-            }
-            a:hover{
-                  color:rgb(143, 128, 242);
-                  cursor: pointer;
+            .nonMobile{
+                display: flex;
+                width: 100%;
+                justify-content:space-evenly;
+                a{
+                    text-decoration: none;
+                    color: whitesmoke;
+                    scroll-behavior: smooth;
+                }
+                a:hover{
+                      color:rgb(143, 128, 242);
+                      cursor: pointer;
+                }
             }
             img{
                 width: 80px;
@@ -83,6 +95,27 @@
                     width: 40px;
                     height: 40px;
                 }
+            }
+        }
+        .rightMobile{
+            width:40%;
+            .menuButton{
+                width: 32px;
+                height: 32px;
+                display: flex;
+                flex-direction: column;
+                justify-content: space-between;
+                cursor: pointer;
+                span{
+                    width: 100%;
+                    height: 3px;
+                    background-color: $mainColor;
+                    transform-origin:left;
+                    transition: all 0.5s ease;
+                }
+            }
+            .nonMobile{
+                display: none;
             }
         }
     }
