--- a/src/Navbar/navbar.scss
+++ b/src/Navbar/navbar.scss
@@ -107,9 +107,11 @@
                 flex-direction: column;
                 justify-content: space-between;
                 cursor: pointer;
+                padding-top: 5px;
                 span{
                     width: 100%;
                     height: 3px;
+                    padding-top: 3px;
                     background-color: $mainColor;
                     transform-origin:left;
                     transition: all 0.5s ease;
