--- a/src/VideoPlayer/videoPlayer.scss
+++ b/src/VideoPlayer/videoPlayer.scss
@@ -19,7 +19,9 @@
     .title{
         filter: blur(1px);
         position: absolute;
-        font-family: 'Poltawski Nowy', serif;
+        font-family: "elfreth", sans-serif;
+        font-weight: 300;
+        font-style: normal;
         z-index: 2;
         font-size: 22px;
         opacity: 80%;
