--- a/src/About/about.scss
+++ b/src/About/about.scss
@@ -1,5 +1,8 @@
 @import "../global.scss";
-
+@font-face {
+    font-family: 'CAT-Eckman';
+    src: url('../fonts/CAT-Eckmann.ttf');
+}
 .about{
     background-color:black;
     font-family: 'Montserrat', sans-serif;
@@ -8,7 +11,7 @@
     flex-direction: column;
     align-items: center;
     .title{
-        font-family: 'Poltawski Nowy', serif;
+        font-family: $h1;
         @include mobile{
             font-size: 12px;
         }
