--- a/src/Navbar/navbar.scss
+++ b/src/Navbar/navbar.scss
@@ -1,7 +1,10 @@
 @import "../global.scss";
-
+@font-face {
+    font-family: 'CAT-Eckman';
+    src: url('../fonts/CAT-Eckmann.ttf');
+}
 .nav{
-    font-family: 'Poltawski Nowy', serif;
+    font-family: $h1;
     width:100%;
     height: 10vh;
     color:white;
@@ -41,6 +44,7 @@
             align-items: center;
             .name{
                 font-size: 38px;
+                font-family: "CAT-Eckman";
                 @include mobile{
                     font-size: 20px;
                 }
@@ -67,7 +71,7 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            font-size: 20px;
+            font-size: 28px;
             .menuButton{
                 display: none;
             }
