adds email stuff, removes menu button, tweaks to nac

--- a/src/global.scss
+++ b/src/global.scss
@@ -3,7 +3,7 @@
     src: url('./fonts/CAT-Eckmann.ttf');
 }
 
-$mainColor:#192e99;
+$mainColor:#45272E;
 $secondaryColor:#3d5cf5;
 $tertiaryColor:#f5933d;
 $width: 768px;
