--- a/src/Contact/contact.scss
+++ b/src/Contact/contact.scss
@@ -58,7 +58,6 @@
                         width: 100%;
                         height: 80px;
                         font-size: 20px;
-                        text-align: center;
                         @include mobile{
                             font-size: 12px;
                         }
@@ -69,17 +68,35 @@
                     align-content: center;
                     justify-content: center;
                     button{
-                        font-size: 20px;
+                        font-size: 23px;
+                        font-family: $h1;
                         width: 200px;
                         height: 50px;
                         padding: 5px;
                         @include mobile{
-                            font-size: 10px;
+                            font-size: 20px;
                             width: 180px;
                             height: 40px;
                             padding: 2px;
                         }
                     }
+                }
+                .submissionmessage{
+                    width: 100%;
+                    height: 10%;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    @include mobile{
+                        height: 20%;
+                     }
+                }
+                span{
+                    color:white;
+                    font-family: $h1;
+                    font-size: large;
+                    position: absolute;
+                    margin-top: 19px;
                 }
             }
         }
