--- a/src/Menu/menu.scss
+++ b/src/Menu/menu.scss
@@ -1,10 +1,14 @@
 @import "../global.scss";
-
+@font-face {
+  font-family: 'CAT-Eckman';
+  src: url('../fonts/CAT-Eckmann.ttf');
+}
 .menu {
   width: 175px;
   height: 100vh;
-  font-family: 'Poltawski Nowy', serif;
-  background-image: url("../assets/background4.gif");
+  font-family: $h1;
+  font-size: 30px;
+  background-color: $mainColor;
   position: fixed;
   opacity: 95%;
   top: 0;
@@ -26,11 +30,10 @@
     margin: 0;
     padding: 0;
     list-style: none;
-    font-size: 15px;
+    font-size: 25px;
     font-weight: 100;
     color: white;
     width: 60%;
-    font-weight: lighter;
     @include mobile {
       width: 90%;
       margin-left: 30px;
