--- a/src/Navbar/navbar.scss
+++ b/src/Navbar/navbar.scss
@@ -66,11 +66,11 @@
             }
         }
         .right{
-            width: 50%;
-            padding: 2%;
+            width: 20%;
+            padding: 20px;
             display: flex;
             align-items: center;
-            justify-content: space-between;
+            justify-content: space-evenly;
             font-size: 28px;
             .menuButton{
                 display: none;
