--- a/src/VideoPlayer/videoPlayer.scss
+++ b/src/VideoPlayer/videoPlayer.scss
@@ -1,34 +1,36 @@
 @import '../global.scss';
-
-.videocontainer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    @include mobile{
-        width: 100%;
-        height: 20%;
-    }
-    video{
-        filter: blur(20px);
-        z-index: 1;
+.imagebox{
+    background-image: url('../assets/JakeHawrylak_UpsideDownOptions-0058-3585.png');
+    background-position: center;
+    height: 1000px;
+    .videocontainer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
         @include mobile{
             width: 100%;
-            
+            height: 20%;
         }
-    }
-    .title{
-        filter: blur(1px);
-        position: absolute;
-        font-family: "elfreth", sans-serif;
-        font-weight: 300;
-        font-style: normal;
-        z-index: 2;
-        font-size: 22px;
-        opacity: 80%;
-        @include mobile{
-            font-size: 8px;
-            text-align: center;
-            filter: blur(1px);
+        video{
+            filter: blur(20px);
+            z-index: 1;
+            @include mobile{
+                width: 100%;
+                
+            }
+        }
+        .title{
+            font-family: "elfreth", sans-serif;
+            margin-top: 600px;
+            font-weight: 300;
+            font-style: normal;
+            z-index: 2;
+            font-size: 22px;
+            width: 53%;
+            @include mobile{
+                font-size: 8px;
+                text-align: center;
+            }
         }
     }
 }
