--- a/src/global.scss
+++ b/src/global.scss
@@ -4,8 +4,9 @@
 }
 
 $mainColor:#45272E;
-$secondaryColor:#3d5cf5;
-$tertiaryColor:#f5933d;
+$secondaryColor:#DDAE90;
+$tertiaryColor:#404752;
+$fourthColor:#9BA0A6;
 $width: 768px;
 $h1:'CAT-Eckman';
 
