--- a/src/Contact/contact.scss
+++ b/src/Contact/contact.scss
@@ -4,12 +4,13 @@
     src: url('../fonts/CAT-Eckmann.ttf');
 }
 .contactSection{
-    background-color: black;
+    background-color: $mainColor;
     width: 100%;
     height: auto;
     padding-bottom: 2%;
     .title{
         font-family: $h1;
+        color: $secondaryColor;
         @include mobile{
             font-size: 12px;
         }
@@ -65,6 +66,8 @@
                         width: 200px;
                         height: 50px;
                         padding: 5px;
+                        color: $tertiaryColor;
+                        background-color: $secondaryColor;
                         @include mobile{
                             font-size: 20px;
                             width: 180px;
