--- a/src/VideoPlayer/videoPlayer.scss
+++ b/src/VideoPlayer/videoPlayer.scss
@@ -1,8 +1,13 @@
 @import '../global.scss';
 .imagebox{
+    background-color: white;
     background-image: url('../assets/JakeHawrylak_UpsideDownOptions-0058-3585.png');
     background-position: center;
     height: 1000px;
+    @include mobile{
+        height:900px;
+        background-position: 47.2%;
+    }
     .videocontainer{
         display: flex;
         align-items: center;
@@ -12,7 +17,7 @@
             height: 20%;
         }
         video{
-            filter: blur(20px);
+            // filter: blur(20px);
             z-index: 1;
             @include mobile{
                 width: 100%;
@@ -27,9 +32,12 @@
             z-index: 2;
             font-size: 22px;
             width: 53%;
+            color: $secondaryColor;
             @include mobile{
-                font-size: 8px;
+                font-size: 15px;
                 text-align: center;
+                margin-top: 900px;
+                width:100%;
             }
         }
     }
