--- a/src/Contact/contact.scss
+++ b/src/Contact/contact.scss
@@ -8,6 +8,7 @@
     width: 100%;
     height: auto;
     padding-bottom: 2%;
+    margin-bottom: 40px;
     .title{
         font-family: $h1;
         color: $secondaryColor;
