--- a/src/Releases/music.scss
+++ b/src/Releases/music.scss
@@ -3,14 +3,13 @@
 .music{
     background-color: $tertiaryColor;
     width: 100%;
-    height:450px;
+    height:300px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    font-family: 'Montserrat', sans-serif;
     @include mobile{
-        height: 250px;
-        padding-top: 2px;
+        height: 140px;
+        justify-content: space-around;
     }
     .title{
         font-family: $h1;
@@ -26,6 +25,7 @@
         width: 90%;
         @include mobile{
             width: 95%;
+            height: 500px;
         }
         .platformBox{
             display: flex;
@@ -35,11 +35,16 @@
             width: 100%;
             height: auto;
             padding: 3%;
+            @include mobile{
+                height: 90%;
+                margin-bottom: none;
+                padding: 3px;
+            }
             img{
-                width:100%;
+                width:80%;
                 @include mobile{
                     width: 100%;
-                    padding: 1%;
+
                 }
             }
             img:hover{
