reverting small change to anchors in about

--- a/src/About/about.scss
+++ b/src/About/about.scss
@@ -21,7 +21,7 @@
         text-align: center;
         a{
             text-decoration: wavy;
-            color: whitesmoke;
+            // color: whitesmoke;
         }
         .copy{
             width: 100%;
