--- a/src/About/about.scss
+++ b/src/About/about.scss
@@ -20,8 +20,7 @@
         width:80%;
         text-align: center;
         a{
-            text-decoration: wavy;
-            // color: whitesmoke;
+            text-decoration: none;
         }
         .copy{
             width: 100%;
