changes to releases

--- a/src/About/about.scss
+++ b/src/About/about.scss
@@ -20,7 +20,7 @@
         width:80%;
         text-align: center;
         a{
-            text-decoration: none;
+            color: white;
         }
         .copy{
             width: 100%;
