--- a/src/VideoPlayer/videoPlayer.scss
+++ b/src/VideoPlayer/videoPlayer.scss
@@ -1,12 +1,14 @@
 @import '../global.scss';
 .imagebox{
-    background-color: white;
-    background-image: url('../assets/JakeHawrylak_UpsideDownOptions-0058-3585.png');
-    background-position: center;
+    background-color: $mainColor;
+    background-image: url('../assets/JakeHawrylak_UpsideDownOptions-0106-3632.jpg');
+    background-size: cover;
+    // background-position: center;
     height: 1000px;
+    width: 100%;
     @include mobile{
-        height:900px;
-        background-position: 47.2%;
+        height:840px;
+        background-position: 49.5%;
     }
     .videocontainer{
         display: flex;
@@ -26,17 +28,18 @@
         }
         .title{
             font-family: "elfreth", sans-serif;
-            margin-top: 600px;
+            margin-top: 180px;
             font-weight: 300;
             font-style: normal;
             z-index: 2;
+            text-align: center;
             font-size: 22px;
-            width: 53%;
-            color: $secondaryColor;
+            width: 33%;
+            color: whitesmoke;
             @include mobile{
                 font-size: 15px;
                 text-align: center;
-                margin-top: 900px;
+                margin-top: 1300px;
                 width:100%;
             }
         }
