--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,6 @@ h1 {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #ffffff;
+    background-color: #45272E;
   }
 }
