--- a/src/Navbar/navbar.scss
+++ b/src/Navbar/navbar.scss
@@ -30,6 +30,7 @@
     .wrapper{
         padding:10px 30px;
         display: flex;
+        flex-direction: row;
         align-items: center;
         justify-content: space-between;
         @include mobile{
