--- a/src/Releases/music.scss
+++ b/src/Releases/music.scss
@@ -7,48 +7,41 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: column;
     bottom: 0;
     @include mobile{
         height: 70px;
-        justify-content: space-around;
     }
-    // .title{
-    //     font-family: $h1;
-    //     color: $secondaryColor;
-    //     @include mobile{
-    //         font-size: 12px;
-    //         margin-top: 30px;
-    //     }
-    // }
     .musiccontainer{
         display: flex;
-        // justify-content: space-evenly;
-        // align-items: center;
+        align-items: center;
+        justify-content: center;
         width: 33%;
-        // margin-bottom: 35px;
+        margin-bottom: 50px;
         @include mobile{
-            width: 95%;
+            justify-content: space-evenly;
+            width: 98%;
             height: 100%;
             padding:2px;
-            margin-bottom: 75px;
+            flex-direction: row;
+            align-items: center;
+            margin-bottom: 70px;
         }
         .platformBox{
             display: flex;
+            flex-direction: row;
             justify-content: center;
-            flex-direction: column;
             align-items: center;
-            width: 100%;
+            width: 17%;
             height: auto;
-            // padding: 3.1%;
             @include mobile{
-                height: 90%;
+                width: 10%;
+                height: auto;
                 padding: 5px;
             }
             img{
-                width:80%;
+                width: 50px;
                 @include mobile{
-                    width: 100%;
+                    width: 90%;
 
                 }
             }
