--- a/src/VideoPlayer/videoPlayer.scss
+++ b/src/VideoPlayer/videoPlayer.scss
@@ -1,89 +1,105 @@
 @import '../global.scss';
-.imagebox{
+
+.imagebox {
     background-color: $mainColor;
-    background-image: url('../assets/JakeHawrylak_UpsideDownOptions-0106-3632.jpg');
-    background-size: cover;
-    // background-position: center;
-    height: 1000px;
+    height: 900px;
     width: 100%;
-    @include mobile{
-        height:840px;
-        background-position: 49.5%;
+    margin-top: 80px;
+    display:flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: center;
+    @include mobile {
+        height: 400px;
+        width: 100%;
+        margin-top: 44px;
     }
-    .videocontainer{
-        display: flex;
-        align-items: center;
-        justify-content: center;
+    .imgcontainer{
+        width: 50%;
+        height: 50%;
         @include mobile{
             width: 100%;
-            height: 20%;
+            height: 100%;
         }
-        video{
-            z-index: 1;
+        .topImage{
+            max-width: 100%;
+            height: auto;
             @include mobile{
-                width: 100%;
-                
-            }
-        }
-        .title{
-            font-family: "elfreth", sans-serif;
-            animation: fadeIn 2s;
-            -webkit-animation: fadeIn 2s;
-            -moz-animation: fadeIn 2s;
-            -o-animation: fadeIn 2s;
-            -ms-animation: fadeIn 2s;
-            @keyframes fadeIn {
-                0% {
-                    opacity: 0;
-                }
-                100%{
-                    opacity: 1;
-                }
-            }
-            @-webkit-keyframes fadeIn {
-                0% {
-                    opacity: 0;
-                }
-                100%{
-                    opacity: 1;
-                }
-            }
-            @-moz-keyframes fadeIn {
-                0% {
-                    opacity: 0;
-                }
-                100%{
-                    opacity: 1;
-                }
-            }
-            @-o-keyframes fadeIn {
-                0% {
-                    opacity: 0;
-                }
-                100%{
-                    opacity: 1;
-                }
-            }
-            @-ms-keyframes fadeIn {
-                0% {
-                    opacity: 0;
-                }
-                100%{
-                    opacity: 1;
-                }
-            }
-            margin-top: 580px;
-            z-index: 2;
-            text-align: center;
-            font-size: 18px;
-            width: 100%;
-            color: whitesmoke;
-            @include mobile{
-                font-size: 15px;
-                text-align: center;
-                margin-top: 740px;
-                width:100%;
             }
         }
     }
+
+    .title {
+        font-family: "elfreth", sans-serif;
+        animation: fadeIn 2s;
+        -webkit-animation: fadeIn 2s;
+        -moz-animation: fadeIn 2s;
+        -o-animation: fadeIn 2s;
+        -ms-animation: fadeIn 2s;
+
+        @keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        @-webkit-keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        @-moz-keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        @-o-keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        @-ms-keyframes fadeIn {
+            0% {
+                opacity: 0;
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+
+        margin-top: 580px;
+        z-index: 2;
+        text-align: center;
+        font-size: 18px;
+        width: 100%;
+        color: whitesmoke;
+
+        @include mobile {
+            font-size: 15px;
+            text-align: center;
+            margin-top: 740px;
+            width: 100%;
+        }
+    }
+
 }
