changes to font in about

--- a/src/About/about.scss
+++ b/src/About/about.scss
@@ -26,7 +26,7 @@
             width: 100%;
             height: auto;
             font-size: 35px;
-            font-family: 'Fira Sans', sans-serif;
+            font-family: "hightower-text",serif;
             color: whitesmoke;
             @include mobile{
                 font-size: 18px;
