--- a/src/Contact/contact.scss
+++ b/src/Contact/contact.scss
@@ -9,6 +9,25 @@
     height: auto;
     padding-bottom: 2%;
     margin-bottom: 40px;
+    @keyframes blur {
+        0%{
+            -webkit-filter: blur(50px);
+            -moz-filter: blur(50px);
+            -o-filter: blur(50px);
+            -ms-filter: blur(50px);
+          }
+        50% {
+          -webkit-filter: blur(0px);
+          -moz-filter: blur(0px);
+          -o-filter: blur(0px);
+          -ms-filter: blur(0px);
+        }
+      }
+      animation: blur 12s ease-in-out 0s ;
+    @include mobile{
+        margin-bottom: 0px;
+        padding-bottom: 0px;
+    }
     .title{
         font-family: $h1;
         color: $secondaryColor;
