--- a/src/Footer/footer.scss
+++ b/src/Footer/footer.scss
@@ -1,6 +1,68 @@
-.footer{
-    background-color: rgb(14, 107, 188);
+@import "../global.scss";
+
+.music{
+    background-color: $mainColor;
     width: 100%;
+    height:80px;
     display: flex;
+    align-items: center;
     justify-content: center;
+    bottom: 0;
+    @keyframes blur {
+        0%{
+            -webkit-filter: blur(50px);
+            -moz-filter: blur(50px);
+            -o-filter: blur(50px);
+            -ms-filter: blur(50px);
+          }
+        50% {
+          -webkit-filter: blur(0px);
+          -moz-filter: blur(0px);
+          -o-filter: blur(0px);
+          -ms-filter: blur(0px);
+        }
+      }
+      animation: blur 12s ease-in-out 0s ;
+    @include mobile{
+        height: 70px;
+    }
+    .musiccontainer{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 33%;
+        margin-bottom: 50px;
+        @include mobile{
+            justify-content: space-evenly;
+            width: 98%;
+            height: 100%;
+            padding:2px;
+            flex-direction: row;
+            align-items: center;
+            margin-bottom: 70px;
+        }
+        .platformBox{
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            width: 17%;
+            height: auto;
+            @include mobile{
+                width: 10%;
+                height: auto;
+                padding: 5px;
+            }
+            img{
+                width: 50px;
+                @include mobile{
+                    width: 90%;
+
+                }
+            }
+            img:hover{
+                cursor:pointer;
+            }
+        }
+    }
 }
