--- a/src/Navbar/navbar.scss
+++ b/src/Navbar/navbar.scss
@@ -80,10 +80,13 @@
                 display: flex;
                 width: 100%;
                 justify-content:space-evenly;
+                gap: 30px;
                 a{
                     text-decoration: none;
                     color: $secondaryColor;
                     scroll-behavior: smooth;
+                    display: flex;
+                    
                 }
                 a:hover{
                       color:rgb(143, 128, 242);
