--- a/src/UpcomingShows/upcomingShows.scss
+++ b/src/UpcomingShows/upcomingShows.scss
@@ -1,79 +1,136 @@
 @import "../global.scss";
 
 .upcomingShows {
+    font-family: 'Montserrat', sans-serif;
+    padding: 2em;
+    text-align: center;
     background-color: $mainColor;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+  @include mobile {
+    padding: 1em;
+    width: 100%;
+  }
+
+  .title {
+    font-family: $h1;
+    color: $secondaryColor;
+    margin-bottom: 1em;
+
+    @include mobile {
+      font-size: 30px;
+    }
+  }
+
+  .showWrapper {
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-family: 'Montserrat', sans-serif;
-    padding: 2em;
-    text-align: center;
+    gap: 1em;
+  }
 
-    @keyframes blur {
-        0% { filter: blur(50px); }
-        50% { filter: blur(0px); }
+  .showRow {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 1200px;
+    padding: 1em 2em;
+    backdrop-filter: blur(10px);
+    transition: transform 0.3s ease-in-out;
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+    &:hover {
+      transform: scale(1.02);
     }
-    animation: blur 12s ease-in-out;
 
     @include mobile {
-        padding: 1em;
+        flex-direction: column;
+        text-align: center;
         width: 80%;
+        padding: 1.5em;
+        gap: 0.5em;;
+      }
+      &:last-child {
+        border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+        margin-bottom: 80px;
+      }
+  }
+
+  .showDetails {
+    @include mobile {
+        text-align: center;
+      }
+    flex: 1;
+    text-align: left;
+
+    .showDate {
+      font-size: 1.2rem;
+      font-weight: bold;
+      color: #fff;
     }
 
-    .title{
-        font-family: $h1;
-        color: $secondaryColor;
-        @include mobile{
-            font-size: 30px;
-        }
+    .showTime {
+      font-size: 1rem;
+      color: #ddd;
     }
-    .showWrapper {
-        width: 80%;
+
+    .showVenue {
+      font-size: 1rem;
+      color: #ccc;
+    }
+  }
+
+  .showCity {
+    flex: 1;
+    text-align: center;
+    font-size: 1.2rem;
+    color: #fff;
+    font-weight: bold;
+    @include mobile {
+        text-align: center;
+        font-size: 1rem;
+        margin-bottom: 0.5em;
+      }
+  }
+
+  .showAction {
+    flex: 1;
+    text-align: right;
+    @include mobile {
         display: flex;
         align-items: center;
-        flex-direction: column;
-        gap: 1.5em;
-    }
-
-    .showCard {
-        background: rgba(255, 255, 255, 0.1);
-        padding: 1em 2em;
-        border-radius: 8px;
-        width: 100%;
-        max-width: 600px;
-        backdrop-filter: blur(10px);
+        justify-content: center;
         text-align: center;
-        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-        transition: transform 0.3s ease-in-out;
-
-        &:hover {
-            transform: scale(1.05);
+        margin-top: 1em;
+        width: 100%;
+  
+        .showButton {
+          display: block;
+          width: 100%;
+          max-width: 200px;
+          padding: 0.8em;
+          font-size: 1rem;;
         }
+      }
+    .showButton {
+      padding: 0.7em 1.5em;
+      font-size: 1rem;
+      color: black;
+      background-color: $secondaryColor;
+      border: none;
+      border-radius: 5px;
+      text-decoration: none;
+      transition: background-color 0.3s ease-in-out;
 
-        .showDate {
-            font-size: 1.2rem;
-            font-weight: bold;
-            color: #fff;
-        }
-
-        .showVenue {
-            font-size: 1rem;
-            color: #ddd;
-        }
-
-        .showLink {
-            margin-top: 0.5em;
-            display: inline-block;
-            font-size: 0.9rem;
-            color: #f1c40f;
-            text-decoration: none;
-            transition: color 0.3s;
-
-            &:hover {
-                color: #ffeb3b;
-            }
-        }
+      &:hover {
+        background-color: #ffeb3b;
+      }
     }
+  }
 }
